--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "pnpm approve-builds --all"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
