--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@
 # Server
 PORT=5000
 NODE_ENV=development
+CORS_ORIGIN=http://localhost:5173
 
 # Supabase
 SUPABASE_URL=https://your-project.supabase.co
